--- a/frontend/src/app/components/Header/styles.module.scss
+++ b/frontend/src/app/components/Header/styles.module.scss
@@ -6,6 +6,7 @@
   padding: 32px 220px 300px;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .headerLeft{
@@ -40,6 +41,12 @@
   position: absolute;
   top: 0;
   right: -90px;
+}
+.leftImage{
+  position: absolute;
+  bottom: 0px;
+  left: 30px;
+  width: 140px;
 }
 
 .btn{
