--- a/frontend/src/app/styles/globals.scss
+++ b/frontend/src/app/styles/globals.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -12,6 +13,7 @@
   --orange-100: #f78364;
   --orange-200: #f5643d;
   --pink: #f9f0ee;
+  --gray:#adadad;
 }
 
 button{
