--- a/frontend/src/app/components/Header/styles.module.scss
+++ b/frontend/src/app/components/Header/styles.module.scss
@@ -5,8 +5,10 @@
   align-items: center;
   padding: 32px 220px 300px;
   position: relative;
+  width: 100%;
   overflow: hidden;
-  z-index: 1;
+ 
+
 }
 
 .headerLeft{
@@ -15,6 +17,7 @@
 
   ul{
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     margin-left: 48px;
     gap: 32px;
@@ -58,4 +61,9 @@
   color: #fff;
   padding: 16px;
   gap: 8px;
+  transition: all .2s;
+
+  &:hover{
+    opacity: .8;
+  }
 }
