--- a/frontend/src/app/components/ProductList/styles.module.scss
+++ b/frontend/src/app/components/ProductList/styles.module.scss
@@ -1,8 +1,40 @@
 .productList{
   position: absolute;
   top: 100px;
- left: 16%;
- right: 16%;
+  left: 16%;
+  right: 16%;
   border-top: 2px solid var(--gray);
+  padding-top: 40px;
   display: flex;
+  color: #fff;
+  gap: 20px;
+
+  h3{
+    width: 200px;
+  }
 }
+
+.lab{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .labItems{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 300px;
+    gap: 20px;
+
+    .item{
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      p{
+        font-weight: 300;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
