--- a/frontend/src/app/components/Cards/styles.module.scss
+++ b/frontend/src/app/components/Cards/styles.module.scss
@@ -3,4 +3,8 @@
   align-items: flex-start;
   justify-content: center;
   margin-top: -240px;
+
+  @media screen and (max-width: 980px){
+    margin-top: 0;
+  }
 }
