--- a/frontend/src/app/components/Header/styles.module.scss
+++ b/frontend/src/app/components/Header/styles.module.scss
@@ -1,13 +1,43 @@
 .header{
   background-color: var(--blue-300);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   padding: 32px 220px 300px;
   position: relative;
   width: 100%;
   overflow: hidden;
+
+  .headerTop{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .menu{
+    display: none;
+
+    @media screen and (max-width: 980px) {
+      display: block;
+    }
+  }
+
+  .menuClose{
+    @media screen and (max-width: 980px) {
+      ul{
+        display: none;
+      }
+    }
+  }
+
+  
  
+  @media screen and (max-width: 1300px) {
+    padding: 32px 120px 300px;
+  }
+
+  @media screen and (max-width: 1100px) {
+    padding: 32px 60px 300px;
+  }
 
 }
 
@@ -21,6 +51,11 @@
     list-style: none;
     margin-left: 48px;
     gap: 32px;
+
+    @media screen and (max-width: 980px){
+      display: none;
+    }
+
 
     li{
       color: #fff;
@@ -40,6 +75,40 @@
   }
 }
 
+.headerRigth{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  .btn{
+    background-color: var(--blue-200);
+    border: none;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    color: #fff;
+    padding: 16px;
+    gap: 8px;
+    transition: all .2s;
+  
+    &:hover{
+      opacity: .8;
+    }
+
+    @media screen and (max-width: 980px) {
+      background-color: var(--orange-200);
+      padding: 8px;
+      img{
+        width: 30px;
+        height: 30px;
+      }
+      p{
+        display: none;
+      }
+    }
+  }
+}
+
 .logo{
   width: 160px;
 }
@@ -48,27 +117,38 @@
   position: absolute;
   top: 0;
   right: -90px;
+
+  @media screen and (max-width: 980px){
+    display: none;
+  }
 }
 .leftImage{
   position: absolute;
   bottom: 0px;
   left: 30px;
   width: 140px;
-}
 
-.btn{
-  background-color: var(--blue-200);
-  border: none;
-  display: flex;
-  align-items: center;
-  border-radius: 8px;
-  color: #fff;
-  padding: 16px;
-  gap: 8px;
-  transition: all .2s;
-
-  &:hover{
-    opacity: .8;
+  @media screen and (max-width: 980px){
+    display: none;
   }
 }
+
+.productList{
+  position: absolute;
+  top: 100px;
+  left: 16%;
+  right: 16%;
+  border-top: 2px solid var(--gray);
+  padding-top: 40px;
+  display: flex;
+  color: #fff;
+  gap: 20px;
+
+
+  h3{
+    width: 200px;
+  }
+}
+
+
 
