--- a/frontend/src/app/components/ProductList/styles.module.scss
+++ b/frontend/src/app/components/ProductList/styles.module.scss
@@ -1,13 +1,12 @@
 .productList{
-  position: absolute;
-  top: 100px;
-  left: 16%;
-  right: 16%;
-  border-top: 2px solid var(--gray);
-  padding-top: 40px;
   display: flex;
   color: #fff;
   gap: 20px;
+
+  @media screen and (max-width: 980px){
+    flex-direction: column;
+  }
+
 
   h3{
     width: 200px;
@@ -25,16 +24,6 @@
     width: 300px;
     gap: 20px;
 
-    .item{
-      display: flex;
-      align-items: center;
-      gap: 8px;
-
-      p{
-        font-weight: 300;
-        font-size: 14px;
-      }
-    }
   }
 }
 
