--- a/frontend/src/app/components/Cards/styles.module.scss
+++ b/frontend/src/app/components/Cards/styles.module.scss
@@ -5,6 +5,9 @@
   margin-top: -240px;
 
   @media screen and (max-width: 980px){
-    margin-top: 0;
+    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
   }
 }
