--- a/frontend/src/app/components/Product/styles.module.scss
+++ b/frontend/src/app/components/Product/styles.module.scss
@@ -3,6 +3,14 @@
   box-shadow: 4px 6px 4px -2px rgba(202, 202, 202, 1);
   -webkit-box-shadow: 4px 6px 4px -2px rgba(202, 202, 202, 1);
   -moz-box-shadow: 4px 6px 4px -2px rgba(202, 202, 202, 1);
+
+  @media screen and (max-width: 980px){
+    width: 100%;
+
+    img{
+      width: 100%;
+    }
+  }
   img{
     object-fit: cover;
     border-top-right-radius: 8px;
