--- a/frontend/src/app/components/Products/styles.module.scss
+++ b/frontend/src/app/components/Products/styles.module.scss
@@ -7,6 +7,11 @@
   margin-top: 24px;
   width: 100%;
 
+  @media screen and (max-width: 980px){
+    justify-content: flex-start;
+    padding: 32px;
+  }
+
   h2{
     color: var(--blue-300);
     font-weight: 700;
@@ -19,4 +24,11 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+
+  @media screen and (max-width: 980px){
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30px;
+  }
 }
